# models/blocked_detail.go
@@ -7,16 +7,16 @@ import (
 
 //铸币表
 type BlockedDetail struct {
-	Id             int       `orm:"column(id);pk;auto"`
-	UserId         string    `orm:column(user_id)`
-	CurrentRevenue float64   `orm:column(current_revenue)` //上期支出
-	CurrentOutlay  float64   `orm:column(current_outlay)`  //本期支出
-	OpeningBalance float64   `orm:column(opening_balance)` //上期余额
-	CurrentBalance float64   `orm:column(current_balance)` //本期余额
-	CreateDate     time.Time `orm:column(create_date)`     //创建时间
-	Comment        string    `orm:column(comment)`         //评论
-	TxId           string    `orm:column(tx_id)`           //任务id
-	Account        int       `orm:column(account)`         //生态仓库id
+	Id             int     `orm:"column(id);pk;auto" json:"id"`
+	UserId         string  `orm:"column(user_id)" json:"user_id"`
+	CurrentRevenue float64 `orm:"column(current_revenue)" json:"current_revenue"` //上期支出
+	CurrentOutlay  float64 `orm:"column(current_outlay)" json:"current_outlay"`   //本期支出
+	OpeningBalance float64 `orm:"column(opening_balance)" json:"opening_balance"` //上期余额
+	CurrentBalance float64 `orm:"column(current_balance)" json:"current_balance"` //本期余额
+	CreateDate     string  `orm:"column(create_date)" json:"create_date"`         //创建时间
+	Comment        string  `orm:"column(comment)" json:"comment"`                 //评论
+	TxId           string  `orm:"column(tx_id)" json:"tx_id"`                     //任务id
+	Account        int     `orm:"column(account)" json:"account"`                 //生态仓库id
 }
 
 func (this *BlockedDetail) TableName() string {
@@ -56,7 +56,7 @@ func FindLimitOneAndSaveBlo_d(o orm.Ormer, user_id, comment, tx_id string, coin_
 		CurrentOutlay:  coin_out,
 		OpeningBalance: blocked_old.CurrentBalance,
 		CurrentBalance: blocked_old.CurrentBalance + coin_in*for_mula.ReturnMultiple - coin_out,
-		CreateDate:     time.Now(),
+		CreateDate:     time.Now().Format("2006-01-02 15:04:05"),
 		Comment:        comment,
 		TxId:           tx_id,
 		Account:        account_id,
@@ -130,7 +130,7 @@ func NewCreateAndSaveBlo_d(o orm.Ormer, user_id, comment, tx_id string, coin_out
 		CurrentOutlay:  coin_out,
 		OpeningBalance: 0,
 		CurrentBalance: coin_in * for_mula.ReturnMultiple,
-		CreateDate:     time.Now(),
+		CreateDate:     time.Now().Format("2006-01-02 15:04:05"),
 		Comment:        comment,
 		TxId:           tx_id,
 		Account:        account_id,
@@ -210,4 +210,92 @@ func ForAddCoin(o orm.Ormer, father_id string, coin float64, proportion float64)
 		ForAddCoin(o, user.FatherId, (coin * proportion), proportion*0.1)
 	}
 	return nil
+}
+
+// 查询所用对象
+type FindObj struct {
+	UserId    string
+	TxId      string
+	StartTime string
+	EndTime   string
+}
+
+// Page 分页参数  ---  历史信息
+type HostryFindInfo struct {
+	Items []BlockedDetail `json:"items"` //数据列表
+	Page  Page            `json:"page"`  //分页信息
+}
+
+/*
+	条件查询
+	对象包含的则视为条件
+*/
+func SelectPondMachinemsg(p FindObj, page Page, table_name string) ([]BlockedDetail, Page, error) {
+	var list []BlockedDetail
+	level := ""
+	var err error
+	s_ql := "select * from " + table_name + " where "
+	if p.UserId != "" {
+		level += "1"
+	}
+	if p.TxId != "" {
+		level += "2"
+	}
+	if p.StartTime != "" && p.EndTime != "" {
+		level += "3"
+	}
+	if level == "1" {
+		s_ql = s_ql + "user_id=? order by create_date desc"
+		_, er := NewOrm().Raw(s_ql, p.UserId).QueryRows(&list)
+		err = er
+	} else if level == "12" {
+		s_ql = s_ql + "user_id=? and tx_id=? order by create_date desc"
+		_, er := NewOrm().Raw(s_ql, p.UserId, p.TxId).QueryRows(&list)
+		err = er
+	} else if level == "123" {
+		s_ql = s_ql + "user_id=? and tx_id=? and create_date>? and create_date<? order by create_date desc"
+		_, er := NewOrm().Raw(s_ql, p.UserId, p.TxId, p.StartTime, p.EndTime).QueryRows(&list)
+		err = er
+	} else if level == "13" {
+		s_ql = s_ql + "user_id=? and create_date>? and create_date<? order by create_date desc"
+		_, er := NewOrm().Raw(s_ql, p.UserId, p.StartTime, p.EndTime).QueryRows(&list)
+		err = er
+	} else if level == "23" {
+		s_ql = s_ql + "tx_id=? and create_date>? and create_date<? order by create_date desc"
+		_, er := NewOrm().Raw(s_ql, p.TxId, p.StartTime, p.EndTime).QueryRows(&list)
+		err = er
+	} else if level == "3" {
+		s_ql = s_ql + "create_date > ? and create_date < ? order by create_date desc"
+		_, er := NewOrm().Raw(s_ql, p.StartTime, p.EndTime).QueryRows(&list)
+		err = er
+	}
+
+	if err != nil {
+		return []BlockedDetail{}, Page{}, err
+	}
+
+	page.Count = len(list)
+	if page.PageSize < 10 {
+		page.PageSize = 10
+	}
+	if page.CurrentPage == 0 {
+		page.CurrentPage = 1
+	}
+	start := (page.CurrentPage - 1) * page.PageSize
+	end := start + page.PageSize
+	listle := []BlockedDetail{}
+	if end > len(list) {
+		for _, v := range list[start:] {
+			listle = append(listle, v)
+		}
+	} else {
+		for _, v := range list[start:end] {
+			listle = append(listle, v)
+		}
+	}
+	page.TotalPage = (page.Count / page.PageSize) + 1 //总页数
+	if page.Count <= 5 {
+		page.CurrentPage = 1
+	}
+	return list, page, nil
 }
