# swagger/swagger.yml
@@ -93,6 +93,55 @@ paths:
       responses:
         200___测试:
           description: ""
+  /ecology/filter_history_info:
+    post:
+      tags:
+      - ecology
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - in: query
+        name: page
+        description: 分页信息　－　当前页数
+        required: true
+        type: string
+      - in: query
+        name: pageSize
+        description: 分页信息　－　每页数据量
+        required: true
+        type: string
+      - in: query
+        name: type
+        description: 查询的数据类型　　blocked_detail=铸币表　account_detail=充值表
+        required: true
+        type: string
+      - in: query
+        name: user_id
+        description: 用户id
+        required: true
+        type: string
+      - in: query
+        name: tx_id
+        description: 订单id
+        required: true
+        type: string
+      - in: query
+        name: start_time
+        description: 开始时间
+        required: true
+        type: string
+      - in: query
+        name: end_time
+        description: 结束时间
+        required: true
+        type: string
+      responses:
+        200____交易的历史记录:
+          description: ""
+          schema:
+            $ref: '#/definitions/models.HostryPageInfo_test'
   /ecology/operation_formula_list:
     post:
       tags:
